<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ideabox.bloodbank.DetailActivity"
    android:background="@color/colorWhite">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/blood"
            android:id="@+id/textView"
            android:textColor="@color/colorRed"
            android:textSize="35sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bank"
            android:id="@+id/textView3"
            android:layout_marginStart="3dp"
            android:textColor="@color/colorGray"
            android:textSize="35sp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageView2"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_person_red"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name_of_person"
                android:textSize="30sp"
                android:id="@+id/name"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/blood_group"
                android:textSize="30sp"
                android:id="@+id/bloodgrp"
                android:layout_below="@+id/name"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/phone"
                android:textSize="30sp"
                android:id="@+id/phone"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bloodgrp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/e_mail"
                android:textSize="30sp"
                android:id="@+id/email"
                android:layout_below="@+id/phone"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/city"
                android:textSize="30sp"
                android:id="@+id/city"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/area"
                android:textSize="30sp"
                android:id="@+id/area"
                android:layout_below="@+id/city"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/address"
                android:textSize="30sp"
                android:id="@+id/addr"
                android:layout_below="@+id/area"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:src="@drawable/call_btn"
                android:layout_below="@+id/addr"
                android:layout_centerHorizontal="true"
                android:background="@color/colorWhite"
                android:layout_marginTop="20dp"
                android:onClick="call"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>